@@ -1,0 +1,7 @@
+; $Id: en-GB.plg_content_example.ini 14119M 2010-01-19 07:56:18Z infograf768 $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+PLG_CONT_EXAMPLE_DESC="This is a description of the functionnalities of this plugin."
